# secure-someip-50-client

./: .gitignore
examples/ssl/: gen-certs.sh
examples/ssl/certs/: ca_chain.crt  client.csr  client.key  client_chain.crt  client_ed25519.crt  client_ed25519.csr  client_ed25519.key  client_ed25519_chain.crt  intermediate.csr  intermediate.key  root.crt  root.key  server.crt  server.csr  server.key  server_chain.crt  server_ed25519.crt  server_ed25519.csr  server_ed25519.key  server_ed25519_chain.crt
examples/ssl_experiment/: report.py  report_bench_metrics.py  report_overlay.py  report_ssl_compare.py  run_bench.sh  run_bench_matrix.sh  run_bench_ssl_compare.sh  with_ssl.json  with_ssl_ed25519.json  without_ssl.json
examples/ssl_experiment/src/: bench_client.cpp  bench_server.cpp
experiment/: CMakeLists.txt  README.md
experiment/config/: crypto_suites.json
experiment/examples/: test_combinations.cpp
experiment/include/config/: crypto_config.hpp
experiment/include/crypto/: crypto_factory.hpp
experiment/plugins/: CMakeLists.txt  ascon_speck_plugin.cpp  custom_crypto_plugin.cpp
experiment/src/config/: crypto_config_loader.cpp
experiment/src/crypto/: crypto_factory.cpp
experiment/test/: crypto_test.cpp
implementation/configuration/include/: configuration.hpp  configuration_impl.hpp  internal.hpp
implementation/configuration/src/: configuration_impl.cpp
implementation/endpoints/src/: asio_socket_factory.cpp  endpoint_manager_impl.cpp  tcp_client_endpoint_impl.cpp  tcp_server_endpoint_impl.cpp
